# pendulum

./: LICENCE  Pendulum.py  README.md  TO-DO.txt  main.py  pendulum.spec  pyproject.toml  sim.py  test.py
.github/workflows/: executable.yml  tests.yml
src/: Pendulum.py  gui.py  gui.ui  main.py  main.ui  sim.py  txtMain.py  ui_gui.py
src/core/: Pendulum.py  main.py  sim.py
src/tests/: test_pendulum.py
tests/: test2.py  test_pendulum.py
