[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[tool.ruff.lint]
ignore = ["E251"]

[tool.poetry]
package-mode = false

[project]
name = "pendulum"
version = "0.5.0"
description = "Simulates the motion of a simple pendulum."
authors = [
    {name = "LCrawford13",email = "lukeaubyncrawford@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "pytest (>=8.3.3,<9.0.0)",
    "userpaths (>=0.1.3,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
